--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="estilos.css"> 
 	<meta charset="UTF-8">
-	<title>	</title>
+	<title>	Mi Proyecto Web</title>
 </head>
 <body>
-	
+	<div class="caja"></div>
 </body>
 </html>
